[workspace]
members = [
    "day-1-inverse-captcha", 
    "day-2-corruption-checksum", 
    "day-3-spiral-memory", 
    "day-4-high-entropy-passphrases", 
    "day-5-a-maze-of-twisty-trampolines-all-alike", 
    "day-6-memory-reallocation",
    "day-7-recursive-circus",
    "day-8-i-heard-you-like-registers",
    "day-9-stream-processing",
    "day-10-knot-hash",
    "day-11-hex-ed",
]
